--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.22.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "prettier": "^2.2.1",
+    "prop-types": "^15.7.2",
     "rimraf": "^3.0.2",
     "webpack": "^5.25.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "lint": "eslint src/*.js"
   }
 }
