--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "elm": "^0.19.1-5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "ts-loader": "^8.1.0",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
